Bug 152135 - kgpg wizard ui errors
Summary: kgpg wizard ui errors
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-10 20:23 UTC by FiNeX
Modified: 2007-11-26 19:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
KGPG UI problems (43.06 KB, image/jpeg)
2007-11-10 20:23 UTC, FiNeX
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-11-10 20:23:02 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

The kgpg form used to select the public key while encripting a folder is unusable.
The first form of the kgpg wizard show a "page" label, is it useful? 
See this screenshot: http://img127.imageshack.us/img127/3482/kgpgwe2.jpg
Comment 1 FiNeX 2007-11-10 20:23:34 UTC
Created attachment 22028 [details]
KGPG UI problems
Comment 2 Rolf Eike Beer 2007-11-21 00:23:01 UTC
SVN commit 739386 by dakon:

Remove "Name" as title for every page in the wizard

CCBUG:152135


 M  +9 -0      kgpgwizard.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=739386
Comment 3 Rolf Eike Beer 2007-11-21 00:35:47 UTC
SVN commit 739389 by dakon:

Give descriptive names to pages in wizard

Since we're in string freeze this will not show up until KDE4.1

CCBUG:152135


 M  +9 -0      kgpgwizard.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=739389
Comment 4 Rolf Eike Beer 2007-11-26 19:21:00 UTC
SVN commit 741910 by dakon:

Fix the layout of the public key selection dialog for folder encryption

BUG:152135


 M  +2 -2      kgpg.cpp  
 M  +1 -1      selectpublickeydialog.cpp  
 M  +3 -0      selectpublickeydialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=741910