Fix the layout of the public key selection dialog for folder encryption

BUG:152135

svn path=/trunk/KDE/kdeutils/kgpg/; revision=741910